United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7109887 java/util/Arrays/CopyMethods.java fails with -XX:+DeoptimizeALot
7109887 : java/util/Arrays/CopyMethods.java fails with -XX:+DeoptimizeALot

Details
Type:
Bug
Submit Date:
2011-11-09
Status:
Closed
Updated Date:
2012-03-22
Project Name:
JDK
Resolved Date:
2012-01-23
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs23
Fixed Versions:
hs23

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
Next jdk test failed during Nightly testing:

java/util/Arrays/CopyMethods.java

It started failing after next changes:

7081933: Use zeroing elimination optimization for large array.


----------System.out:(11/275)----------
*** a[282] = -17730 != 0
*** a[283] = -17747 != 0
*** a[284] = -17730 != 0
*** a[285] = -17747 != 0
*** a[286] = -17730 != 0
*** a[287] = -17747 != 0
*** a[288] = -17730 != 0
*** a[289] = -17747 != 0
*** a[290] = -17730 != 0
*** a[291] = -17747 != 0
*** a[292] = -17730 != 0
----------System.err:(16/12233)----------
java.lang.RuntimeException: checkArray failed at 282 short[] : [-8193, -9802, -19664, 32302, 30456, 19816, 22069, -20172, 20764, 7105, -19777, -21458, -21514, 18865, -7319, 23940, 975, 13298, 19603, -30912, -18809, 23368, -21167, 12020, 32680, 12553, -13402, -22565, 8631, -22561, 12273, -25795, -12082, -29492, -23641, -19688, 12903, -5010, 26434, -13572, 1657, 2180, 21368, -13514, -12856, -24144, 22960, -28112, 377, -26243, 6065, -28649, -20508, 12452, 29340, -1858, -27987, 25995, 27932, -20542, -3563, 14093, -21285, 21229, -5747, -12416, 25399, 1759, -7796, -9229, -29387, -5654, 21154, -27721, -16715, 20798, 9675, 13344, -4889, 13381, 17928, -2932, -5123, 27216, 14123, -18780, -27615, -24973, -14862, -2334, -15959, 7596, 9559, -16046, -23415, -7350, 3366, -20837, 4873, -30836, -21041, 11584, -11337, -2937, -29315, -25821, 4766, 1357, -23961, -3253, 30135, 29515, 15973, 5094, -31585, -18957, -24635, -8047, 22410, -18278, 15199, -15146, -16009, -30046, 5094, 23285, 27044, 28123, -19839, 15078, -30652, -6362, -27495, 13726, 14959, -19109, 8948, -32623, -24230, -11668, -31230, -27272, 16583, -7478, -5257, -13741, 20670, -18681, 4377, -6735, -2435, -15428, 10458, 13103, -26452, -19540, 27177, -9155, -15659, 30761, -7036, -30424, 19474, 31670, 26449, -29101, -19193, -9491, -27922, 10695, -3822, -14430, 26374, -27409, 3777, 31305, -7642, -4453, 29572, 21908, -31089, 16718, -24925, 8288, -10163, 10677, -22671, 31185, 10376, -7820, -5438, -5189, 16921, -19928, -25703, 16195, -13472, 5289, 11045, -2107, 29012, 143, -17426, 6136, 12250, 12279, 5195, -27312, 19291, 23431, -15337, 7587, -12400, -19794, 29092, 4879, -22625, 5168, -32274, -7654, -23701, -13599, -28653, 5658, -473, -11600, 26626, -12330, 14892, -5657, 30835, -32147, 26125, -3408, -4074, 6774, 7911, 26842, -1522, -3224, -7172, -4131, -12896, 16188, -28797, 15643, -31449, -15280, 2233, -7576, -4021, 5518, -31941, -17204, -10894, -22323, -8297, 2951, 22133, 28534, 287, 29524, 27799, -10902, 11521, 29170, -20558, 18979, -14700, 1503, -9038, -18407, -780, -29082, -12473, -29082, 15824, 10204, -7466, 16556, -32382, 2085, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730, -17747, -17730]
	at CopyMethods.checkArray(CopyMethods.java:219)
	at CopyMethods.fullTests(CopyMethods.java:268)
	at CopyMethods.fullTests(CopyMethods.java:333)
	at CopyMethods.main(CopyMethods.java:325)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:601)
	at com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
	at java.lang.Thread.run(Thread.java:722)

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/7e0e43cf86d6
                                     
2012-03-22
EVALUATION

See main CR
                                     
2011-11-30
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-emb/hotspot/rev/7e0e43cf86d6
                                     
2011-11-29
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-rt/hotspot/rev/7e0e43cf86d6
                                     
2011-11-15
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/7e0e43cf86d6
                                     
2011-11-09
EVALUATION

In changes for 7081933 I forgot to zero array when compiled code is deoptimized.
                                     
2011-11-09



Hardware and Software, Engineered to Work Together