7109887: java/util/Arrays/CopyMethods.java fails with -XX:+DeoptimizeALot

Zero array when compiled code is deoptimized.

Reviewed-by: never, twisti